tests/ui/parser/break_continue_outside_loop.stderr
error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |     break;
   |     ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |     continue;
   |     ^^^^^^^^^
   |

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         break;
   |         ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         continue;
   |         ^^^^^^^^^
   |

error: No visibility specified. Did you intend to add public?
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |     function f() {
   |              ^
   |

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         break;
   |         ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |         continue;
   |         ^^^^^^^^^
   |

error: `break` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |             break;
   |             ^^^^^^
   |

error: `continue` outside of a loop
  --> ROOT/tests/ui/parser/break_continue_outside_loop.sol:LL:CC
   |
LL |             continue;
   |             ^^^^^^^^^
   |

error: aborting due to 9 previous errors

